<?xml version="1.0"?>
<package format="2">
  <name>linefit_ground_segmentation</name>
  <version>0.0.1</version>
  <description>linefit_ground_segmentation</description>
  
  <maintainer email="517137233@qq.com">Lorenz Wellhausen</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
</package>

